Solving more and more tests for the Article Resource